tests/module/mod150.stderr

mod150.hs:2:20: error: [GHC-69158]
    Conflicting exports for ‘id’:
       ‘module M’ exports ‘M.id’ defined at mod150.hs:2:42
       ‘module Prelude’ exports ‘Prelude.id’
         imported from ‘Prelude’
         (and originally defined in ‘GHC.Internal.Base’)
